17Jun04=======================================================================
1. alter processing of PC17 to see if they get distributed more than now.
14Jun04=======================================================================
1. fix previous fix of sh/dx
09Jan04=======================================================================
1. removed PC90 which was breaking various filtering things.
2. added realtime spot formats to sh/dx (at least in basic form), this is
activated by using either of the keywords 'real' of 'rt' on the command
line. Also added sh/fdx as an alias.
01Jan04=======================================================================
1. move position of USDB init to get rid of an obscure bug pointed out by
Charlie K1XX.
2. Remove redundant documentation
31Dec03=======================================================================
1. alter remote database handling to 'new standard'.
30Dec03=======================================================================
1. updated website to make it clear(er) that it all works under Windows (like
wot Charlie said...).
2. made the changes to the German Messages that Thomas DL3SBB sent me a 
loooong time ago.
3. made 'dx by' require at least privilege 1.
29Dec03=======================================================================
1. updated dxoldtonew.pl so that it takes an AK1A DX.DAT file (argument on
command line or a default of /spider/data/DX.DAT and outputs the standard
DXSpider format spot files. Please be warned that if any of these files 
already exist, the data will be appended onto the end of the file. Please
make sure you have backups or at least be aware that this may give strange
results which may be 'out of order'.
24May03=======================================================================
1. Added more french translations from Robert (HB9BZA) and we now have some
french help as well (also from Robert). A splendid effort. Thank you.