@@ -1,3 +1,6 @@
+22Jun04=======================================================================
+1. Add the show/mydx command which *may* filter your spots using your
+spot filter.
 17Jun04=======================================================================
 1. alter processing of PC17 to see if they get distributed more than now.
 14Jun04=======================================================================
